# image_processor

./: CMakeLists.txt  blur.cpp  blur.h  bmp_image.hpp  crop.cpp  crop.h  edge.cpp  edge.h  filter.cpp  filter.h  greyscale.cpp  greyscale.h  image_processor.cpp  input_controller.cpp  input_controller.h  matrix.hpp  negative.cpp  negative.h  retro.cpp  retro.h  sharp.cpp  sharp.h
